src/test/deca/codegen/valid/class/calls/selection.deca
// Description:
//    Utilisation de la selection
//
// Resultats:
//    Aucune erreur
//
//  ima_output: 33

class A {
	int a = 33;
}

{
	A b = new A();
	int a = b.a;
	print(a);
}

